ISSUE-2428 refactor: EnvsClustersTenantsControllerService
Signed-off-by: Luke Zhou <sharlock@gmail.com>