@@ -8,11 +8,14 @@ import static io.aiven.klaw.error.KlawErrorMessages.ENV_CLUSTER_TNT_ERR_105;
 import static io.aiven.klaw.error.KlawErrorMessages.ENV_CLUSTER_TNT_ERR_106;
 import static io.aiven.klaw.error.KlawErrorMessages.ENV_CLUSTER_TNT_ERR_107;
 import static io.aiven.klaw.error.KlawErrorMessages.ENV_CLUSTER_TNT_ERR_108;
+import static io.aiven.klaw.helpers.CompareUtils.isEqual;
+import static io.aiven.klaw.helpers.CompareUtils.isFalse;
 import static io.aiven.klaw.helpers.KwConstants.DATE_TIME_DDMMMYYYY_HHMMSS_FORMATTER;
 import static io.aiven.klaw.helpers.KwConstants.DEFAULT_TENANT_ID;
 import static io.aiven.klaw.helpers.KwConstants.ORDER_OF_KAFKA_CONNECT_ENVS;
 import static io.aiven.klaw.helpers.KwConstants.ORDER_OF_TOPIC_ENVS;
 import static io.aiven.klaw.helpers.KwConstants.REQUEST_TOPICS_OF_ENVS;
+import static io.aiven.klaw.model.enums.PermissionType.*;
 import static io.aiven.klaw.model.enums.RolesType.SUPERADMIN;
 import static io.aiven.klaw.service.UsersTeamsControllerService.MASKED_PWD;
 import static java.util.stream.Collectors.toList;
@@ -28,6 +31,7 @@ import io.aiven.klaw.error.KlawBadRequestException;
 import io.aiven.klaw.error.KlawException;
 import io.aiven.klaw.error.KlawValidationException;
 import io.aiven.klaw.helpers.Pager;
+import io.aiven.klaw.helpers.db.rdbms.HandleDbRequestsJdbc;
 import io.aiven.klaw.model.ApiResponse;
 import io.aiven.klaw.model.KwTenantModel;
 import io.aiven.klaw.model.enums.*;
@@ -47,7 +51,6 @@ import java.time.ZoneOffset;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -84,31 +87,33 @@ public class EnvsClustersTenantsControllerService {
     this.mailService = mailService;
   }
 
+  private boolean isAuthorizedFor(PermissionType type) {
+    return !commonUtilsService.isNotAuthorizedUser(getPrincipal(), type);
+  }
+
   public synchronized EnvModelResponse getEnvDetails(String envSelected, String clusterType) {
     String userName = getUserName();
     log.debug("getEnvDetails {}", envSelected);
     int tenantId = commonUtilsService.getTenantId(userName);
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
-      // tenant filtering
-      if (!commonUtilsService.getEnvsFromUserId(userName).contains(envSelected)) {
-        return null;
-      }
-    }
-
-    Env env = manageDatabase.getHandleDbRequests().getEnvDetails(envSelected, tenantId);
-    if (env == null || "false".equals(env.getEnvExists())) {
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_ENVS)
+        && !commonUtilsService.getEnvsFromUserId(userName).contains(envSelected)) {
       return null;
     }
 
-    EnvModelResponse envModel = new EnvModelResponse();
-    copyProperties(env, envModel);
-    envModel.setClusterName(
+    Env env = manageDatabase.getHandleDbRequests().getEnvDetails(envSelected, tenantId);
+    if (env == null || isFalse(env.getEnvExists())) {
+      return null;
+    }
+    KwClusters clusters =
         manageDatabase
             .getClusters(KafkaClustersType.of(clusterType), tenantId)
-            .get(envModel.getClusterId())
-            .getClusterName());
-    envModel.setTenantName(manageDatabase.getTenantMap().get(envModel.getTenantId()));
+            .get(env.getClusterId());
+    String tenantName = manageDatabase.getTenantMap().get(tenantId);
+
+    EnvModelResponse envModel = new EnvModelResponse();
+    copyProperties(env, envModel);
+    envModel.setClusterName(clusters.getClusterName());
+    envModel.setTenantName(tenantName);
 
     log.debug("Return env model {}", envModel);
     return envModel;
@@ -120,10 +125,8 @@ public class EnvsClustersTenantsControllerService {
     if (userInfo != null) {
       copyProperties(userInfo, userInfoModel);
       userInfoModel.setUserPassword(MASKED_PWD);
-      return userInfoModel;
-    } else {
-      return null;
     }
+    return userInfo == null ? null : userInfoModel;
   }
 
   public List<KwClustersModelResponse> getClusters(String typeOfCluster) {
@@ -133,19 +136,17 @@ public class EnvsClustersTenantsControllerService {
             manageDatabase.getClusters(KafkaClustersType.of(typeOfCluster), tenantId).values());
     List<KwClustersModelResponse> clustersModels = new ArrayList<>();
     List<Env> allEnvList = manageDatabase.getAllEnvList(tenantId);
-    KwClustersModelResponse tmpClusterModel;
     for (KwClusters cluster : clusters) {
-      tmpClusterModel = new KwClustersModelResponse(cluster);
-      int clusterId = tmpClusterModel.getClusterId();
-      tmpClusterModel.setShowDeleteCluster(true);
+      KwClustersModelResponse clusterModel = new KwClustersModelResponse(cluster);
+      int clusterId = clusterModel.getClusterId();
+      clusterModel.setShowDeleteCluster(true);
       // set only for authorized users
-      if (!commonUtilsService.isNotAuthorizedUser(
-          getPrincipal(), PermissionType.ADD_EDIT_DELETE_CLUSTERS)) {
-        if (allEnvList.stream().anyMatch(env -> Objects.equals(env.getClusterId(), clusterId))) {
-          tmpClusterModel.setShowDeleteCluster(false);
-        }
+      if (isAuthorizedFor(ADD_EDIT_DELETE_CLUSTERS)) {
+        boolean linkedToEnv =
+            allEnvList.stream().anyMatch(env -> Objects.equals(env.getClusterId(), clusterId));
+        clusterModel.setShowDeleteCluster(!linkedToEnv);
       }
-      clustersModels.add(tmpClusterModel);
+      clustersModels.add(clusterModel);
     }
 
     return clustersModels;
@@ -160,7 +161,7 @@ public class EnvsClustersTenantsControllerService {
     if (clusterId != null && !clusterId.equals("")) {
       kwClustersModelList =
           kwClustersModelList.stream()
-              .filter(cluster -> Objects.equals(cluster.getClusterId() + "", clusterId))
+              .filter(cluster -> isEqual(cluster.getClusterId(), clusterId))
               .collect(toList());
     }
 
@@ -173,27 +174,14 @@ public class EnvsClustersTenantsControllerService {
                               model.getClusterName(),
                               model.getBootstrapServers(),
                               model.getProtocol().getName())
+                          .filter(s -> s != null)
                           .map(String::toLowerCase)
                           .anyMatch(s -> s.contains(searchClusterParam.toLowerCase())))
               .sorted(Comparator.comparingInt(KwClustersModelResponse::getClusterId))
               .collect(toList());
     }
     return Pager.getItemsList(
-        pageNo,
-        "",
-        10,
-        kwClustersModelList,
-        (pageContext, mp) -> {
-          mp.setTotalNoPages(pageContext.getTotalPages());
-          int totalPages = Integer.parseInt(pageContext.getTotalPages());
-          List<String> numList =
-              IntStream.range(1, totalPages + 1)
-                  .mapToObj(String::valueOf)
-                  .collect(Collectors.toList());
-          mp.setAllPageNos(numList);
-          mp.setCurrentPage(pageContext.getPageNo());
-          return mp;
-        });
+        pageNo, "", 10, kwClustersModelList, (pageContext, mp) -> mp.loadPageContext(pageContext));
   }
 
   public List<EnvIdInfo> getSyncEnvs() {
@@ -218,12 +206,9 @@ public class EnvsClustersTenantsControllerService {
       EnvIdInfo envIdInfo = new EnvIdInfo();
       envIdInfo.setId(env.getId());
       String baseClusterDropDownStr = " (Base Sync cluster)";
-      if (Objects.equals(syncCluster, env.getId())) {
-        envIdInfo.setName(env.getName() + baseClusterDropDownStr);
-      } else {
-        envIdInfo.setName(env.getName());
-      }
-
+      boolean isSyncEnv = Objects.equals(syncCluster, env.getId());
+      String envName = isSyncEnv ? env.getName() + baseClusterDropDownStr : env.getName();
+      envIdInfo.setName(envName);
       envsOnly.add(envIdInfo);
     }
 
@@ -259,13 +244,9 @@ public class EnvsClustersTenantsControllerService {
     String orderOfEnvs = commonUtilsService.getEnvProperty(tenantId, ORDER_OF_TOPIC_ENVS);
     List<Env> listEnvs = manageDatabase.getKafkaEnvList(tenantId);
     List<EnvModelResponse> envModelList = getEnvModels(listEnvs, KafkaClustersType.KAFKA, tenantId);
-    envModelList.forEach(
-        envModel ->
-            envModel.setTenantName(manageDatabase.getTenantMap().get(envModel.getTenantId())));
 
     // set deletable only to authorized, and check for count
-    if (!commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (isAuthorizedFor(ADD_EDIT_DELETE_ENVS)) {
       envModelList.forEach(
           envModel -> {
             envModel.setShowDeleteEnv(
@@ -285,11 +266,6 @@ public class EnvsClustersTenantsControllerService {
     List<Env> listEnvs = manageDatabase.getKafkaConnectEnvList(tenantId);
     List<EnvModelResponse> envModelList =
         getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
-    Optional<KwTenants> kwTenantsOptional =
-        manageDatabase.getHandleDbRequests().getMyTenants(tenantId);
-    String kwTenantsName =
-        kwTenantsOptional.isPresent() ? kwTenantsOptional.get().getTenantName() : null;
-    envModelList.forEach(envModel -> envModel.setTenantName(kwTenantsName));
 
     envModelList.sort(Comparator.comparingInt(topicEnv -> orderOfEnvs.indexOf(topicEnv.getId())));
     return envModelList;
@@ -322,44 +298,25 @@ public class EnvsClustersTenantsControllerService {
           envListMap.stream()
               .filter(
                   env ->
-                      env.getName().toLowerCase().contains(searchEnvParam.toLowerCase())
-                          || env.getClusterName()
-                              .toLowerCase()
-                              .contains(searchEnvParam.toLowerCase())
-                          || (env.getOtherParams() != null
-                              && env.getOtherParams()
-                                  .toLowerCase()
-                                  .contains(searchEnvParam.toLowerCase()))
-                          || manageDatabase
-                              .getTenantMap()
-                              .get(env.getTenantId())
-                              .toLowerCase()
-                              .contains(searchEnvParam.toLowerCase()))
-              .toList();
+                      Stream.of(
+                              env.getName(),
+                              env.getClusterName(),
+                              env.getOtherParams(),
+                              env.getTenantName())
+                          .filter(s -> s != null)
+                          .map(String::toLowerCase)
+                          .anyMatch(s -> s.contains(searchEnvParam.toLowerCase())))
+              .collect(toList());
     }
 
     return Pager.getItemsList(
-        "",
-        pageNo,
-        10,
-        envListMap,
-        (pageContext, mp) -> {
-          mp.setTotalNoPages(pageContext.getTotalPages());
-          List<String> numList = new ArrayList<>();
-          int totalPages = Integer.parseInt(pageContext.getTotalPages());
-          for (int k = 1; k <= totalPages; k++) {
-            numList.add("" + k);
-          }
-          mp.setAllPageNos(numList);
-          mp.setCurrentPage(pageContext.getPageNo());
-          mp.setTotalRecs(pageContext.getTotalRecs());
-          return mp;
-        });
+        pageNo, "", 10, envListMap, (pageContext, mp) -> mp.loadPageContext(pageContext));
   }
 
   private List<EnvModelResponse> getEnvModels(
       List<Env> listEnvs, KafkaClustersType clusterType, int tenantId) {
     List<EnvModelResponse> envModelList = new ArrayList<>();
+    String tenantName = manageDatabase.getTenantMap().get(tenantId);
     for (Env listEnv : listEnvs) {
       log.debug("Params {} for env {}", listEnv.getParams(), listEnv.getName());
       KwClusters kwCluster =
@@ -368,6 +325,7 @@ public class EnvsClustersTenantsControllerService {
         EnvModelResponse envModel = new EnvModelResponse();
         copyProperties(listEnv, envModel);
         envModel.setClusterName(kwCluster.getClusterName());
+        envModel.setTenantName(tenantName);
         envModelList.add(envModel);
       } else {
         log.error("Error : Environment/cluster not loaded :{}", listEnv);
@@ -387,13 +345,8 @@ public class EnvsClustersTenantsControllerService {
     List<EnvModelResponse> envModelList =
         getEnvModels(listEnvs, KafkaClustersType.SCHEMA_REGISTRY, tenantId);
 
-    envModelList.forEach(
-        envModel ->
-            envModel.setTenantName(manageDatabase.getTenantMap().get(envModel.getTenantId())));
-
     // set deletable only to authorized, and check for count
-    if (!commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (isAuthorizedFor(ADD_EDIT_DELETE_ENVS)) {
       envModelList.forEach(
           envModel -> {
             envModel.setShowDeleteEnv(
@@ -420,8 +373,7 @@ public class EnvsClustersTenantsControllerService {
     int tenantId = getUserDetails(userName).getTenantId();
     List<Env> listEnvs = manageDatabase.getKafkaConnectEnvList(tenantId);
 
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (commonUtilsService.isNotAuthorizedUser(getPrincipal(), ADD_EDIT_DELETE_ENVS)) {
       final Set<String> allowedEnvIdSet = commonUtilsService.getEnvsFromUserId(userName);
       listEnvs =
           listEnvs.stream().filter(env -> allowedEnvIdSet.contains(env.getId())).collect(toList());
@@ -430,13 +382,8 @@ public class EnvsClustersTenantsControllerService {
     List<EnvModelResponse> envModelList =
         getEnvModels(listEnvs, KafkaClustersType.KAFKA_CONNECT, tenantId);
 
-    envModelList.forEach(
-        envModel ->
-            envModel.setTenantName(manageDatabase.getTenantMap().get(envModel.getTenantId())));
-
     // set deletable only to authorized, and check for count
-    if (!commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (isAuthorizedFor(ADD_EDIT_DELETE_ENVS)) {
       envModelList.forEach(
           envModel -> {
             envModel.setShowDeleteEnv(
@@ -452,8 +399,7 @@ public class EnvsClustersTenantsControllerService {
   public ApiResponse addNewEnv(EnvModel newEnv) throws KlawException, KlawValidationException {
     log.info("addNewEnv {}", newEnv);
     int tenantId = getUserDetails(getUserName()).getTenantId();
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_ENVS)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
 
@@ -541,29 +487,30 @@ public class EnvsClustersTenantsControllerService {
     int defaultNum = Integer.parseInt(defaultNumber);
     int maxNum = Integer.parseInt(maxNumber);
     List<String> parameterList = new ArrayList();
-    for (int i = 0; i < maxNum; i++) {
-      if ((i + 1) == defaultNum) {
-        parameterList.add(i, String.valueOf(i + 1) + " (default)");
-      } else {
-        parameterList.add(i, String.valueOf(i + 1));
-      }
+    for (int i = 1; i <= maxNum; i++) {
+      String value = i == defaultNum ? i + " (default)" : String.valueOf(i);
+      parameterList.add(value);
     }
     return parameterList;
   }
 
   private boolean validateConnectedClusters(
       EnvModel newEnv, List<Integer> kafkaClusterIds, List<Integer> schemaClusterIds) {
-    if (newEnv.getType().equals(KafkaClustersType.KAFKA.value)) {
-      if (kafkaClusterIds.contains(newEnv.getClusterId())) {
+    KafkaClustersType type = KafkaClustersType.of(newEnv.getType());
+    switch (type) {
+      case KAFKA -> {
         // don't allow same cluster id be assigned to another kafka env, if regex is not defined
-        return newEnv.getParams().getTopicPrefix() == null
+        return kafkaClusterIds.contains(newEnv.getClusterId())
+            && newEnv.getParams().getTopicPrefix() == null
             && newEnv.getParams().getTopicSuffix() == null;
       }
-    } else if (newEnv.getType().equals(KafkaClustersType.SCHEMA_REGISTRY.value)) {
-      // don't allow same cluster id be assigned to another schema env
-      return schemaClusterIds.contains(newEnv.getClusterId());
+      case SCHEMA_REGISTRY -> {
+        return schemaClusterIds.contains(newEnv.getClusterId());
+      }
+      default -> {
+        return false;
+      }
     }
-    return false;
   }
 
   public ApiResponse addNewCluster(KwClustersModel kwClustersModel) {
@@ -571,8 +518,7 @@ public class EnvsClustersTenantsControllerService {
 
     int tenantId = commonUtilsService.getTenantId(getUserName());
 
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_CLUSTERS)) {
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_CLUSTERS)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
 
@@ -595,30 +541,30 @@ public class EnvsClustersTenantsControllerService {
     KwClusters kwCluster = new KwClusters();
     copyProperties(kwClustersModel, kwCluster);
     kwCluster.setTenantId(tenantId);
-    kwCluster.setClusterName(kwCluster.getClusterName().toUpperCase());
+    kwCluster.setClusterName(kwClustersModel.getClusterName().toUpperCase());
     kwCluster.setKafkaFlavor(kwClustersModel.getKafkaFlavor().value);
     kwCluster.setClusterType(kwClustersModel.getClusterType().value);
 
     // only for new cluster requests
     String result = manageDatabase.getHandleDbRequests().addNewCluster(kwCluster);
+
     if (result.equals(ApiResultStatus.SUCCESS.value)) {
       commonUtilsService.updateMetadata(
           tenantId, EntityType.CLUSTER, MetadataOperationType.CREATE, null);
       return ApiResponse.SUCCESS;
+    } else {
+      return ApiResponse.FAILURE;
     }
-    return ApiResponse.FAILURE;
   }
 
   public ApiResponse deleteCluster(String clusterId) throws KlawException {
     log.info("deleteCluster {}", clusterId);
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_CLUSTERS)) {
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_CLUSTERS)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
     int tenantId = commonUtilsService.getTenantId(getUserName());
     List<Env> allEnvList = manageDatabase.getAllEnvList(tenantId);
-    if (allEnvList.stream()
-        .anyMatch(env -> Objects.equals(env.getClusterId(), Integer.parseInt(clusterId)))) {
+    if (allEnvList.stream().anyMatch(env -> isEqual(env.getClusterId(), clusterId))) {
       return ApiResponse.notOk(ENV_CLUSTER_TNT_ERR_104);
     }
 
@@ -641,25 +587,25 @@ public class EnvsClustersTenantsControllerService {
   public ApiResponse deleteEnvironment(String envId, String envType) throws KlawException {
     log.info("deleteEnvironment {}", envId);
     int tenantId = commonUtilsService.getTenantId(getUserName());
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_ENVS)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
 
+    HandleDbRequestsJdbc jdbc = manageDatabase.getHandleDbRequests();
     KafkaClustersType type = KafkaClustersType.of(envType);
     switch (type) {
       case KAFKA:
-        if (manageDatabase.getHandleDbRequests().existsKafkaComponentsForEnv(envId, tenantId)) {
+        if (jdbc.existsKafkaComponentsForEnv(envId, tenantId)) {
           return ApiResponse.notOk(ENV_CLUSTER_TNT_ERR_105);
         }
         break;
       case KAFKA_CONNECT:
-        if (manageDatabase.getHandleDbRequests().existsConnectorComponentsForEnv(envId, tenantId)) {
+        if (jdbc.existsConnectorComponentsForEnv(envId, tenantId)) {
           return ApiResponse.notOk(ENV_CLUSTER_TNT_ERR_106);
         }
         break;
       case SCHEMA_REGISTRY:
-        if (manageDatabase.getHandleDbRequests().existsSchemaComponentsForEnv(envId, tenantId)) {
+        if (jdbc.existsSchemaComponentsForEnv(envId, tenantId)) {
           return ApiResponse.notOk(ENV_CLUSTER_TNT_ERR_107);
         }
         break;
@@ -667,8 +613,7 @@ public class EnvsClustersTenantsControllerService {
 
     try {
       removeAssociatedKafkaOrSchemaEnvironment(envId, tenantId, envType);
-      String result =
-          manageDatabase.getHandleDbRequests().deleteEnvironmentRequest(envId, tenantId);
+      String result = jdbc.deleteEnvironmentRequest(envId, tenantId);
       if (result.equals(ApiResultStatus.SUCCESS.value)) {
         manageDatabase.removeEnvFromCache(tenantId, Integer.valueOf(envId), false);
         return ApiResponse.ok(result);
@@ -681,8 +626,8 @@ public class EnvsClustersTenantsControllerService {
     }
   }
 
-  private void removeAssociatedKafkaOrSchemaEnvironment(String envId, int tenantId, String envType)
-      throws KlawException {
+  private void removeAssociatedKafkaOrSchemaEnvironment(
+      String envId, int tenantId, String envType) {
 
     if (KafkaClustersType.KAFKA.value.equals(envType)
         || KafkaClustersType.SCHEMA_REGISTRY.value.equals(envType)) {
@@ -701,32 +646,32 @@ public class EnvsClustersTenantsControllerService {
   private EnvTag addEnvironmentMapping(
       EnvTag envTag, String envId, String envName, int tenantId, String envType)
       throws KlawValidationException {
-    // only assignable on a schema registry
-    if (KafkaClustersType.SCHEMA_REGISTRY.value.equals(envType)) {
-      log.debug("Env Tag supplied = {}", envTag);
-      if (envTag != null && !envTag.getId().isEmpty()) {
-
-        associateWithKafkaEnv(envTag, envId, envName, tenantId);
-        // remove existing association if it exists
-        removeAssociationWithKafkaEnv(envTag, envId, tenantId);
-
-      } else {
-        // envTag is always null here
-        removeAssociationWithKafkaEnv(null, envId, tenantId);
+    KafkaClustersType type = KafkaClustersType.of(envType);
+    switch (type) {
+      case SCHEMA_REGISTRY -> {
+        // only assignable on a schema registry
+        log.debug("Env Tag supplied = {}", envTag);
+        if (envTag != null && !envTag.getId().isEmpty()) {
+          associateWithKafkaEnv(envTag, envId, envName, tenantId);
+          // remove existing association if it exists
+          removeAssociationWithKafkaEnv(envTag, envId, tenantId);
+        } else {
+          // envTag is always null here
+          removeAssociationWithKafkaEnv(null, envId, tenantId);
+        }
       }
-    } else if (KafkaClustersType.KAFKA.value.equals(envType)) {
-      envTag = getKafkaAssociation(envTag, envId, tenantId);
+      case KAFKA -> envTag = getKafkaAssociation(envTag, envId, tenantId);
     }
 
     return envTag;
   }
 
-  private EnvTag getKafkaAssociation(EnvTag KafkaEnvTag, String kafkaEnvId, int tenantId) {
-    if (KafkaEnvTag == null) {
+  private EnvTag getKafkaAssociation(EnvTag kafkaEnvTag, String kafkaEnvId, int tenantId) {
+    if (kafkaEnvTag == null) {
       Env existing = manageDatabase.getHandleDbRequests().getEnvDetails(kafkaEnvId, tenantId);
-      KafkaEnvTag = existing != null ? existing.getAssociatedEnv() : KafkaEnvTag;
+      kafkaEnvTag = existing != null ? existing.getAssociatedEnv() : null;
     }
-    return KafkaEnvTag;
+    return kafkaEnvTag;
   }
 
   private void removeAssociationWithKafkaEnv(EnvTag envTag, String envId, int tenantId) {
@@ -809,7 +754,9 @@ public class EnvsClustersTenantsControllerService {
               .getHandleDbRequests()
               .getClusterDetails(Integer.parseInt(clusterId), tenantId);
 
-      if (kwClusters == null) return null;
+      if (kwClusters == null) {
+        return null;
+      }
 
       KwClustersModelResponse kwClustersModel = new KwClustersModelResponse(kwClusters);
       return kwClustersModel;
@@ -834,22 +781,14 @@ public class EnvsClustersTenantsControllerService {
       return ApiResponse.notOk(ENV_CLUSTER_TNT_ERR_108);
     }
 
-    if (isExternal
-        && commonUtilsService.isNotAuthorizedUser(getPrincipal(), PermissionType.ADD_TENANT)) {
+    if (isExternal && !isAuthorizedFor(ADD_TENANT)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
 
     KwTenants kwTenants = new KwTenants();
-    kwTenants.setTenantName(kwTenantModel.getTenantName());
-    kwTenants.setTenantDesc(kwTenantModel.getTenantDesc());
-    kwTenants.setContactPerson(kwTenantModel.getContactPerson());
-    kwTenants.setOrgName(kwTenantModel.getOrgName());
-
-    if (isExternal) {
-      kwTenantModel.setActiveTenant(true);
-    }
-
-    kwTenants.setIsActive(String.valueOf(kwTenantModel.isActiveTenant()));
+    copyProperties(kwTenantModel, kwTenants);
+    Boolean active = isExternal || kwTenantModel.isActiveTenant();
+    kwTenants.setIsActive(active.toString());
 
     try {
       String addNewTenantStatus = manageDatabase.getHandleDbRequests().addNewTenant(kwTenants);
@@ -894,16 +833,8 @@ public class EnvsClustersTenantsControllerService {
     Optional<KwTenants> tenant = manageDatabase.getHandleDbRequests().getMyTenants(tenantId);
     KwTenantModel kwTenantModel = new KwTenantModel();
     if (tenant.isPresent()) {
-      kwTenantModel.setTenantName(tenant.get().getTenantName());
-      kwTenantModel.setContactPerson(tenant.get().getContactPerson());
-      kwTenantModel.setActiveTenant("true".equals(tenant.get().getIsActive()));
-      kwTenantModel.setOrgName(tenant.get().getOrgName());
-      kwTenantModel.setTenantDesc(tenant.get().getTenantDesc());
-      kwTenantModel.setTenantId(tenant.get().getTenantId());
-
-      kwTenantModel.setAuthorizedToDelete(
-          !commonUtilsService.isNotAuthorizedUser(
-              getPrincipal(), PermissionType.UPDATE_DELETE_MY_TENANT));
+      kwTenantModel = new KwTenantModel(tenant.get());
+      kwTenantModel.setAuthorizedToDelete(isAuthorizedFor(UPDATE_DELETE_MY_TENANT));
     }
     return kwTenantModel;
   }
@@ -913,8 +844,7 @@ public class EnvsClustersTenantsControllerService {
   }
 
   public ApiResponse deleteTenant() throws KlawException {
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.UPDATE_DELETE_MY_TENANT)) {
+    if (!isAuthorizedFor(UPDATE_DELETE_MY_TENANT)) {
       return ApiResponse.NOT_AUTHORIZED;
     }
     int tenantId = commonUtilsService.getTenantId(getUserName());
@@ -1051,12 +981,9 @@ public class EnvsClustersTenantsControllerService {
     ClusterInfo clusterInfo = new ClusterInfo();
     log.debug("getEnvDetails {}", envSelected);
     int tenantId = commonUtilsService.getTenantId(getUserName());
-    if (commonUtilsService.isNotAuthorizedUser(
-        getPrincipal(), PermissionType.ADD_EDIT_DELETE_ENVS)) {
-      // tenant filtering
-      if (!commonUtilsService.getEnvsFromUserId(getUserName()).contains(envSelected)) {
-        return null;
-      }
+    if (!isAuthorizedFor(ADD_EDIT_DELETE_ENVS)
+        && !commonUtilsService.getEnvsFromUserId(getUserName()).contains(envSelected)) {
+      return null;
     }
 
     Env env = manageDatabase.getHandleDbRequests().getEnvDetails(envSelected, tenantId);
